[package]
name = "neuroflow"
version = "0.1.2"

description = "The neural network library implemented in Rust"
repository = "https://github.com/MikhailKravets/NeuroFlow"
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "data-learning", "math", "backpropagation"]
categories = ["algorithms", "science"]
license = "MIT"

authors = ["Mikhail Kravets <michkravets@gmail.com>"]
exclude = ["examples/*", "tests/*"]

[badges]
travis-ci = { repository = "MikhailKravets/NeuroFlow", branch = "master" }
codecov = { repository = "MikhailKravets/NeuroFlow", branch = "master", service = "github" }

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "^0.9"
csv = "^1.0.0-beta.5"

[dev-dependencies]
time = "0.1"