[package]
name = "neuroflow"
version = "0.2.0"

description = "The neural network library implemented in Rust"
repository = "https://github.com/MikhailKravets/NeuroFlow"
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "data-learning", "math", "backpropagation"]
categories = ["algorithms", "science"]
license = "MIT"

authors = ["Mikhail Kravets <michkravets@gmail.com>"]
exclude = ["examples/*", "tests/*"]

[badges]
codecov = { repository = "MikhailKravets/NeuroFlow", branch = "master", service = "github" }

[dependencies]
rand = "~0.8"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
bincode = "~1.3"
csv = "~1.2"
rand_distr = "0.4.3"

[dev-dependencies]
time = "0.1"
